k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: node-app
  labels:
    app: node-app
spec:
  replicas: 2
  selector:
    matchLabels:
      app: node-app
  template:
    metadata:
      labels:
        app: node-app
    spec:
      containers:
      - name: node-container
        image: 339713011246.dkr.ecr.ap-south-1.amazonaws.com/nodejs-app-repo:latest
        ports:
        - containerPort: 3000
